force-app/main/default/objects/salesforce__c/salesforce__c.object-meta.xml
<CustomObject>
    <label>salesforce</label>
    <nameField>
        <label>salesforce Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>salesforces</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>