force-app/main/default/objects/salesforce__c/fields/admin__c.field-meta.xml
<CustomField>
    <fullName>admin__c</fullName>
    <label>admin</label>
    <referenceTo>admin__c</referenceTo>
    <relationshipLabel>salesforces</relationshipLabel>
    <relationshipName>salesforces</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>