force-app/main/default/objects/salesforce__c/fields/developer__c.field-meta.xml
<CustomField>
    <fullName>developer__c</fullName>
    <label>developer</label>
    <referenceTo>developer__c</referenceTo>
    <relationshipLabel>salesforces</relationshipLabel>
    <relationshipName>salesforces</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>