force-app/main/default/objects/salesforce__c/fields/Faculty__c.field-meta.xml
<CustomField>
    <fullName>Faculty__c</fullName>
    <formula>salesforcegotreferral__r.admin__r.Name</formula>
    <label>Faculty</label>
    <type>Text</type>
</CustomField>