force-app/main/default/objects/salesforce__c/fields/salesforcegotreferral__c.field-meta.xml
<CustomField>
    <fullName>salesforcegotreferral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>salesforce</label>
    <referenceTo>salesforce__c</referenceTo>
    <relationshipLabel>salesforces</relationshipLabel>
    <relationshipName>salesforces</relationshipName>
    <type>Lookup</type>
</CustomField>