force-app/main/default/objects/salesforce__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>developer__c</columns>
    <columns>salesforcegotreferral__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Faculty__c</columns>
    <columns>admin__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>